Added horizontal rules <hr>

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
+  <head>
+    <title>Cong's Blog</title>
+  </head>
 
-<head>
+  <body>
+    <h1>Contents</h1>
+    <hr>
 
-<title>Cong's</title>
+    <h2>Floating-Point Number</h2>
+      <p>How it is implemented.</p>
 
-</head>
-
-<body>
-
-<h1>Contents</h1>
-<p>Floating-Point Number</p>
-<p>Bloom Filter</p>
-
-</body>
-
+    <h2>Bloom Filter</h2>
+      <p>How to configure.</p>
+  </body>
 </html>
