Added <link> tag of CSS file
<link rel="stylesheet" type="text/css" href="index.css">
# Attribute rel="stylesheet" means that the relationship between current file (index.html) and this new file (index.css) is the new file the stylesheet to the current file.
# Attribute type="text/css" means that the Media Types, formerly known as MIME (Multipurpose Internet Mail Extensions) types, for a complete list of types, check out http://www.iana.org/assignments/media-types/media-types.xhtml from IANA (the Internet Assigned Names Authority).

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Cong's Blog</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
 
   <body>
