--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 
     <h2>Bloom Filter</h2>
       <p>How to configure.</p>
+	
+	<button id='like'>Click me if you like this page.</button>
   </body>
 </html>
