Changed to double quote

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <h2>Bloom Filter</h2>
       <p>How to configure.</p>
 	
-	<button id='like'>Click me if you like this page.</button>
+	<button id="like">Click me if you like this page.</button>
   </body>
 </html>
