--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Cong's Blog</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="main.js"></script> 
   </head>
 
   <body>
