Changed the place of source reference to JavaScript file in index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 	
 	<button id="like">Click me if you like this page.</button>
     
+	<script>
+const btn = document.getElementById("like")
+btn = addEventListener("click", function(){
+  alert("thank you");
+});
+</script>
 	<script src="main.js"></script> 
   </body>
 </html>
