Corrected the previous test.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <hr>
 
     <h2>Floating-Point Number</h2>
-      <p>How it is implemented. (This is a committed sentence on the original master.)</p>
+      <p>How it is implemented. (This is a committed sentence on the forked master.)</p>
 
     <h2>Bloom Filter</h2>
       <p>How to configure.</p>
